--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.platform=h2
+spring.sql.init.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Habilitar la consola H2 (opcional)
@@ -14,7 +14,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Regex password de usuario
-key.validation.regex=^(?=.*[A-Za-z])(?=.*\\d)[A-Za-z\\d]{8,}$
+key.validation.regex.regexp=^(?=.*[A-Za-z])(?=.*\\d)[A-Za-z\\d]{8,}$
 
 
 
